--- a/10.2.0/angular/src/app/layout/header-left-navbar.component.html
+++ b/10.2.0/angular/src/app/layout/header-left-navbar.component.html
@@ -1,12 +1,13 @@
 <ul class="navbar-nav">
-    <li class="nav-item">
+    <!-- <li class="nav-item">
         <a class="nav-link" href="javascript:;" (click)="toggleSidebar()">
             <i class="fas fa-bars"></i>
         </a>
-    </li>
+    </li> -->
     <li class="nav-item d-none d-sm-inline-block">
         <a class="nav-link" [routerLink]="['home']">
-            {{ 'HomePage' | localize }}
+            <!-- {{ 'HomePage' | localize }} -->
+            <i class="fas fa-home"></i>
         </a>
     </li>
     <!-- <li class="nav-item d-none d-sm-inline-block">
