--- a/10.2.0/angular/src/app/layout/header.component.html
+++ b/10.2.0/angular/src/app/layout/header.component.html
@@ -2,6 +2,7 @@
     <header-left-navbar></header-left-navbar>
     <ul class="navbar-nav ml-auto">
         <header-language-menu></header-language-menu>
+        <app-header-notification-menu></app-header-notification-menu>
         <header-user-menu></header-user-menu>
     </ul>
 </nav>
