--- a/10.2.0/angular/src/app/layout/sidebar-menu.component.html
+++ b/10.2.0/angular/src/app/layout/sidebar-menu.component.html
@@ -1,54 +1,48 @@
 <nav class="mt-2">
-    <ul
-        class="nav nav-pills nav-sidebar flex-column nav-flat"
-        data-widget="treeview"
-        role="menu"
-        data-accordion="false">
+    <ul class="p-0" data-widget="treeview" role="menu" data-accordion="false">
         @for (item of menuItems; track item) {
-            <ng-container *ngTemplateOutlet="sidebarInner; context: { item: item }"></ng-container>
+        <ng-container *ngTemplateOutlet="sidebarInner; context: { item: item }"></ng-container>
         }
     </ul>
 </nav>
 
 <ng-template #sidebarInner let-item="item">
     @if (isMenuItemVisible(item)) {
-        <li class="nav-item" [class.menu-open]="!item.isCollapsed" [class.has-treeview]="item.children">
-            @if (item.route && item.route.indexOf('http') != 0) {
-                <a class="nav-link" [routerLink]="item.route" [class.active]="item.isActive">
-                    <i class="nav-icon {{ item.icon }}"></i>
-                    <p>
-                        {{ item.label }}
-                    </p>
-                </a>
+    <li class="" [class.menu-open]="!item.isCollapsed" [class.has-treeview]="item.children">
+        @if (item.route && item.route.indexOf('http') != 0) {
+        <a class="hover-class" [routerLink]="item.route" [class.active]="item.isActive">
+            <i class="nav-icon {{ item.icon }}"></i>
+            <span class="side-menu-name">
+                {{ item.label }}
+            </span>
+        </a>
+        }
+        @if (item.route && item.route.indexOf('http') == 0 && !item.children) {
+        <a class="hover-class" target="_blank" [href]="item.route">
+            <i class="nav-icon {{ item.icon }}"></i>
+            <span class="side-menu-name">
+                {{ item.label }}
+            </span>
+        </a>
+        }
+        @if (!item.route && item.children) {
+        <a class="hover-class" href="javascript:;" [class.active]="item.isActive"
+            (click)="item.isCollapsed = !item.isCollapsed">
+            <i class="nav-icon {{ item.icon }}"></i>
+            <span class="side-menu-name">
+                {{ item.label }}
+                <!-- <i class="right fas fa-angle-right"></i> -->
+            </span>
+            <span class="menu-arrow" [class.open]="!item.isCollapsed"></span>
+        </a>
+        }
+        @if (item.children) {
+        <ul class="px-3" [attr.aria-hidden]="null" [collapse]="item.isCollapsed" [isAnimated]="true">
+            @for (item of item.children; track item) {
+            <ng-container *ngTemplateOutlet="sidebarInner; context: { item: item }"></ng-container>
             }
-            @if (item.route && item.route.indexOf('http') == 0 && !item.children) {
-                <a class="nav-link" target="_blank" [href]="item.route">
-                    <i class="nav-icon {{ item.icon }}"></i>
-                    <p>
-                        {{ item.label }}
-                    </p>
-                </a>
-            }
-            @if (!item.route && item.children) {
-                <a
-                    class="nav-link"
-                    href="javascript:;"
-                    [class.active]="item.isActive"
-                    (click)="item.isCollapsed = !item.isCollapsed">
-                    <i class="nav-icon {{ item.icon }}"></i>
-                    <p>
-                        {{ item.label }}
-                        <i class="right fas fa-angle-left"></i>
-                    </p>
-                </a>
-            }
-            @if (item.children) {
-                <ul class="nav nav-treeview" [attr.aria-hidden]="null"[collapse]="item.isCollapsed" [isAnimated]="true">
-                    @for (item of item.children; track item) {
-                        <ng-container *ngTemplateOutlet="sidebarInner; context: { item: item }"></ng-container>
-                    }
-                </ul>
-            }
-        </li>
+        </ul>
+        }
+    </li>
     }
 </ng-template>
