--- a/10.2.0/angular/src/app/layout/sidebar.component.html
+++ b/10.2.0/angular/src/app/layout/sidebar.component.html
@@ -1,7 +1,7 @@
-<aside class="main-sidebar sidebar-dark-primary elevation-4">
+<aside class="main-sidebar sidebar-dark-primary-bg elevation-4">
     <sidebar-logo></sidebar-logo>
-    <div class="sidebar">
-        <sidebar-user-panel></sidebar-user-panel>
+    <div class="sidebar px-3">
+        <!-- <sidebar-user-panel></sidebar-user-panel> -->
         <sidebar-menu></sidebar-menu>
     </div>
 </aside>
