--- a/10.2.0/angular/src/app/roles/roles.component.html
+++ b/10.2.0/angular/src/app/roles/roles.component.html
@@ -1,15 +1,25 @@
 <div [@routerTransition]>
     <section class="content-header">
         <div class="container-fluid">
-            <div class="row">
-                <div class="col-6">
-                    <h1>{{ 'Roles' | localize }}</h1>
+            <div class="d-flex justify-content-between align-items-center">
+                <div>
+                    <p-breadcrumb [model]="items" />
                 </div>
-                <div class="col-6 text-right">
-                    <a href="javascript:;" class="btn bg-blue" (click)="createRole()">
-                        <i class="fa fa-plus-square"></i>
-                        {{ 'Create' | localize }}
-                    </a>
+                <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+                    <div class="btn-group mr-1" role="group" aria-label="Third group" pTooltip="Refresh"
+                        tooltipPosition="top" (click)="refresh()">
+                        <button type="button" class="btn btn-md refresh-btn">
+                            <span class="pi pi-refresh"></span>
+                        </button>
+                    </div>
+                    <div class="btn-group mr-2" role="group" aria-label="Fourth group" (click)="createRole()">
+                        <button type="button" class="btn btn-md add-btn">
+                            <div class="d-flex align-items-center justify-content-between">
+                                <span class="pi pi-plus-circle mr-2"></span>
+                                <span>New Role</span>
+                            </div>
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -17,106 +27,66 @@
     <section class="content px-2 pb-5">
         <div class="container-fluid">
             <div class="card mb-0 table-wrapper">
-                <div class="card-header">
-                    <div class="row">
-                        <div class="col-md-6">&emsp;</div>
-                        <div class="col-md-6">
-                            <div class="input-group">
-                                <div class="input-group-prepend">
-                                    <button type="button" class="btn bg-blue" (click)="list()">
-                                        <i class="fas fa-search"></i>
-                                    </button>
-                                </div>
-                                <input type="text" class="form-control" name="keyword"
-                                    [placeholder]="'SearchWithThreeDot' | localize" [(ngModel)]="keyword"
-                                    (keyup.enter)="list()" />
-                            </div>
-                        </div>
-                    </div>
-                </div>
                 <div class="card-body">
-                    <div class="table-responsive">
-                        <!--<Primeng-TurboTable-Start>-->
-                        <div class="primeng-datatable-container table-striped table-bordered">
-                            <p-table #dataTable sortMode="multiple" (onLazyLoad)="list($event)"
-                                [value]="primengTableHelper.records"
-                                rows="{{ primengTableHelper.defaultRecordsCountPerPage }}" [paginator]="false"
-                                [lazy]="true" [tableStyle]="{ 'min-width': '50rem' }">
-                                <ng-template pTemplate="header">
-                                    <tr>
-                                        <th style="min-width: 150px" pSortableColumn="name">
-                                            {{ 'RoleName' | localize }}
-                                            <p-sortIcon field="name"></p-sortIcon>
-                                        </th>
-                                        <th style="min-width: 150px" pSortableColumn="displayName">
-                                            {{ 'DisplayName' | localize }}
-                                            <p-sortIcon field="displayName"></p-sortIcon>
-                                        </th>
-                                        <th style="min-width: 130px">
-                                            {{ 'Actions' | localize }}
-                                        </th>
-                                    </tr>
-                                </ng-template>
-
-                                <ng-template pTemplate="body" let-record="$implicit">
-                                    <tr>
-                                        <td>
-                                            <span>
-                                                {{ record.name }}
-                                            </span>
-                                        </td>
-                                        <td>
-                                            <span>
-                                                {{ record.displayName }}
-                                            </span>
-                                        </td>
-                                        <td>
-                                            <button type="button" pButton icon="pi pi-ellipsis-v" class="p-button-text"
-                                                (click)="rowMenu.toggle($event); selectedRecord = record">
-                                            </button>
-                                            <p-overlayPanel #rowMenu class="custom-overlay" [dismissable]="true">
-                                                <ul class="custom-overlay-menu">
-                                                    <li (click)="editRole(selectedRecord)">
-                                                        <i class="pi pi-pencil"></i> Edit
-                                                    </li>
-                                                    <li (click)="delete(selectedRecord)">
-                                                        <i class="pi pi-trash"></i> Delete
-                                                    </li>
-                                                </ul>
-                                            </p-overlayPanel>
-                                        </td>
-                                    </tr>
-                                </ng-template>
-                            </p-table>
-                            <div class="primeng-no-data" *ngIf="primengTableHelper.totalRecordsCount == 0">
-                                {{ 'NoData' | localize }}
-                            </div>
+                    <div class="d-flex justify-content-end align-items-center mb-3">
+                        <div>
+                            <input class="search-bar-text" type="text" pInputText [(ngModel)]="keyword" pSize="small"
+                                [placeholder]="'SearchWithThreeDot' | localize" (input)="list()" />
                         </div>
-                        <!--<Primeng-TurboTable-End>-->
+                    </div>
+                    <p-table #dataTable sortMode="multiple" (onLazyLoad)="list($event)"
+                        [value]="primengTableHelper.records" rows="{{ primengTableHelper.defaultRecordsCountPerPage }}"
+                        [paginator]="false" [lazy]="true" [tableStyle]="{ 'min-width': '50rem' }">
+                        <ng-template #header>
+                            <tr>
+                                <th pSortableColumn="name">
+                                    {{ 'RoleName' | localize }}
+                                    <p-sortIcon field="name"></p-sortIcon>
+                                </th>
+                                <th pSortableColumn="displayName">
+                                    {{ 'DisplayName' | localize }}
+                                    <p-sortIcon field="displayName"></p-sortIcon>
+                                </th>
+                                <th>
+                                    {{ 'Actions' | localize }}
+                                </th>
+                            </tr>
+                        </ng-template>
+
+                        <ng-template pTemplate="body" let-record="$implicit">
+                            <tr>
+                                <td>
+                                    <span>
+                                        {{ record.name }}
+                                    </span>
+                                </td>
+                                <td>
+                                    <span>
+                                        {{ record.displayName }}
+                                    </span>
+                                </td>
+                                <td>
+                                    <button class="btn btn-sm border rounded-1 px-3" type="button"
+                                        style="background-color: #f8fafc;"
+                                        (click)="rowMenu.toggle($event); selectedRecord = record">
+                                        <i class="fa-solid fa-ellipsis-vertical"></i>
+                                    </button>
+                                    <p-menu #rowMenu [popup]="true" [style]="{'min-width':'80px', 'max-width':'150px'}"
+                                        [model]="editDeleteMenus" appendTo="body"></p-menu>
+                                </td>
+                            </tr>
+                        </ng-template>
+                    </p-table>
+                    <div class="primeng-no-data" *ngIf="primengTableHelper.totalRecordsCount == 0">
+                        {{ 'NoData' | localize }}
                     </div>
                 </div>
-                <div class="card-footer table-card-footer bg-white border-top">
-                    <div class="row d-flex justify-content-center align-items-center">
-                        <div class="col-sm-4 col-12 text-sm-left text-center">
-                            <button class="btn btn-secondary" (click)="refresh()">
-                                <i class="fas fa-redo-alt"></i>
-                            </button>
-                        </div>
-                        <div class="col-sm-8 col-12">
-                            <div class="float-sm-right m-auto">
-                                <div class="primeng-paging-container">
-                                    <p-paginator [rows]="primengTableHelper.defaultRecordsCountPerPage" #paginator
-                                        (onPageChange)="list($event)"
-                                        [totalRecords]="primengTableHelper.totalRecordsCount"
-                                        [rowsPerPageOptions]="primengTableHelper.predefinedRecordsCountPerPage"
-                                        [showCurrentPageReport]="true" [currentPageReportTemplate]="
+                <p-paginator [rows]="primengTableHelper.defaultRecordsCountPerPage" #paginator
+                    (onPageChange)="list($event)" [totalRecords]="primengTableHelper.totalRecordsCount"
+                    [rowsPerPageOptions]="primengTableHelper.predefinedRecordsCountPerPage"
+                    [showCurrentPageReport]="true" [currentPageReportTemplate]="
                                             'TotalRecordsCount' | localize: primengTableHelper.totalRecordsCount
                                         "></p-paginator>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
     </section>
