--- a/10.2.0/angular/src/app/users/create-user/create-user-dialog.component.html
+++ b/10.2.0/angular/src/app/users/create-user/create-user-dialog.component.html
@@ -1,90 +1,85 @@
 <form class="form-horizontal" autocomplete="off" #createUserModal="ngForm" (ngSubmit)="save()">
     <abp-modal-header [title]="'CreateNewUser' | localize" (onCloseClick)="bsModalRef.hide()"></abp-modal-header>
     <div class="modal-body">
-
-        <!-- Role Selection -->
-        <div class="form-group row required">
-            <label class="col-md-3 col-form-label" for="userRole">
-                {{ 'Role' | localize }}
-            </label>
-            <div class="col-md-9">
-                <select class="form-control" name="userRole" id="userRole" required [(ngModel)]="selectedRole" [disabled]="disableRoleSelection"
-                    (ngModelChange)="onRoleChange()" #roleModel="ngModel">
-                    <option *ngFor="let role of roles" [value]="role.normalizedName">
-                        {{ role.normalizedName | localize }}
-                    </option>
-                </select>
-                <abp-validation-summary [control]="roleModel" [controlEl]="roleModel"></abp-validation-summary>
+        <div class="d-flex justify-content-end">
+            <div>
+                <label>{{ 'IsActive' | localize }}</label>
+            </div>
+            <div class="ml-2">
+                <p-checkbox [(ngModel)]="user.isActive" [binary]="true" name="isActive" />
             </div>
         </div>
-        <!-- User Details Section -->
-        <div class="form-group row required">
-            <label class="col-md-3 col-form-label" for="name">
-                {{ 'Name' | localize }}
-            </label>
-            <div class="col-md-9">
-                <input type="text" class="form-control" name="name" id="name" required maxlength="64"
-                    [(ngModel)]="user.name" #nameModel="ngModel" #nameEl />
+        <!-- Role Selection -->
+        <div class="form-group row required mb-0">
+            <div class="col-md-12">
+                <label class="col-form-label" for="userRole">
+                    {{ 'Role' | localize }}
+                </label>
+                <p-select [options]="roles" placeholder="Select role" optionLabel="normalizedName"
+                    optionValue="normalizedName" [(ngModel)]="selectedRole" name="userRole" class="w-100" required
+                    [disabled]="disableRoleSelection" #roleModel="ngModel" (ngModelChange)="onRoleChange()" placeholder="Select role">
+                </p-select>
+            </div>
+        </div>
+        <div class="form-group row required mb-0">
+            <div class="col-md-6 d-flex flex-column">
+                <label class="col-form-label" for="name">
+                    {{ 'Name' | localize }}
+                </label>
+                <input type="text" pInputText name="name" id="name" required maxlength="64" [(ngModel)]="user.name"
+                    #nameModel="ngModel" #nameEl placeholder="Enter name"/>
                 <abp-validation-summary [control]="nameModel" [controlEl]="nameEl"></abp-validation-summary>
             </div>
-        </div>
-
-        <div class="form-group row required">
-            <label class="col-md-3 col-form-label" for="surname">
-                {{ 'Surname' | localize }}
-            </label>
-            <div class="col-md-9">
-                <input type="text" class="form-control" name="surname" id="surname" required maxlength="64"
-                    [(ngModel)]="user.surname" #surnameModel="ngModel" #surnameEl />
+            <div class="col-md-6 d-flex flex-column">
+                <label class="col-form-label" for="surname">
+                    {{ 'Surname' | localize }}
+                </label>
+                <input type="text" pInputText name="surname" id="surname" required maxlength="64"
+                    [(ngModel)]="user.surname" #surnameModel="ngModel" #surnameEl placeholder="Enter surname" />
                 <abp-validation-summary [control]="surnameModel" [controlEl]="surnameEl"></abp-validation-summary>
             </div>
         </div>
 
-        <div class="form-group row required">
-            <label class="col-md-3 col-form-label" for="userName">
-                {{ 'UserName' | localize }}
-            </label>
-            <div class="col-md-9">
-                <input type="text" class="form-control" name="userName" id="userName" required minlength="2"
-                    maxlength="256" [(ngModel)]="user.userName" #userNameModel="ngModel" #userNameEl />
+        <div class="form-group row required mb-0">
+            <div class="col-md-6 d-flex flex-column">
+                <label class="col-form-label" for="userName">
+                    {{ 'UserName' | localize }}
+                </label>
+                <input type="text" pInputText name="userName" id="userName" required minlength="2" maxlength="256"
+                    [(ngModel)]="user.userName" #userNameModel="ngModel" #userNameEl placeholder="Enter username"/>
                 <abp-validation-summary [control]="userNameModel" [controlEl]="userNameEl"></abp-validation-summary>
             </div>
-        </div>
-
-        <div class="form-group row required">
-            <label class="col-md-3 col-form-label" for="emailAddress">
-                {{ 'EmailAddress' | localize }}
-            </label>
-            <div class="col-md-9">
-                <input type="email" class="form-control" name="emailAddress" id="emailAddress" required maxlength="256"
-                    pattern="^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{1,})+$" [(ngModel)]="user.emailAddress"
+            <div class="col-md-6 d-flex flex-column">
+                <label class="col-form-label" for="emailAddress">
+                    {{ 'EmailAddress' | localize }}
+                </label>
+                <input type="email" pInputText name="emailAddress" id="emailAddress" required maxlength="256"
+                    pattern="^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{1,})+$" [(ngModel)]="user.emailAddress" placeholder="Enter email address"
                     #emailAddressModel="ngModel" #emailAddressEl />
                 <abp-validation-summary [control]="emailAddressModel"
                     [controlEl]="emailAddressEl"></abp-validation-summary>
             </div>
         </div>
 
-        <div class="form-group row required">
-            <label class="col-md-3 col-form-label" for="password">
-                {{ 'Password' | localize }}
-            </label>
-            <div class="col-md-9">
-                <input type="password" class="form-control" name="password" id="password" required maxlength="32"
+
+        <div class="form-group row required mb-0">
+            <div class="col-md-6 d-flex flex-column">
+                <label class="col-form-label" for="password">
+                    {{ 'Password' | localize }}
+                </label>
+                <input type="password" pInputText name="password" id="password" required maxlength="32"
                     validateEqual="confirmPassword" reverse="true"
                     pattern="(?=^.{8,}$)(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?!.*\s)[0-9a-zA-Z!@#$%^&*()]*$"
-                    [(ngModel)]="user.password" #passwordModel="ngModel" #passwordEl />
+                    [(ngModel)]="user.password" #passwordModel="ngModel" #passwordEl placeholder="Enter password" />
                 <abp-validation-summary [control]="passwordModel" [controlEl]="passwordEl"
                     [customValidationErrors]="passwordValidationErrors"></abp-validation-summary>
             </div>
-        </div>
-
-        <div class="form-group row required">
-            <label class="col-md-3 col-form-label" for="confirmPassword">
-                {{ 'ConfirmPassword' | localize }}
-            </label>
-            <div class="col-md-9">
-                <input type="password" class="form-control" name="confirmPassword" id="confirmPassword" required
-                    maxlength="32" validateEqual="password" reverse="false" [(ngModel)]="confirmPassword"
+            <div class="col-md-6 d-flex flex-column">
+                <label class="col-form-label" for="confirmPassword">
+                    {{ 'ConfirmPassword' | localize }}
+                </label>
+                <input type="password" pInputText name="confirmPassword" id="confirmPassword" required maxlength="32"
+                    validateEqual="password" reverse="false" [(ngModel)]="confirmPassword" placeholder="Enter confirmPassword"
                     #confirmPasswordModel="ngModel" #confirmPasswordEl />
                 <abp-validation-summary [control]="confirmPasswordModel" [controlEl]="confirmPasswordEl"
                     [customValidationErrors]="confirmPasswordValidationErrors"></abp-validation-summary>
@@ -106,7 +101,7 @@
         </app-select-patient-role>
 
         <!-- Active Status -->
-        <div class="form-group row mb-0">
+        <!-- <div class="form-group row mb-0">
             <label class="col-md-3 col-form-label">
                 {{ 'IsActive' | localize }}
             </label>
@@ -117,7 +112,7 @@
                     <label class="custom-control-label mt-2" for="isActive"></label>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
     <abp-modal-footer [cancelDisabled]="saving" [saveDisabled]="!isFormValid || saving"
         (onCancelClick)="bsModalRef.hide()"></abp-modal-footer>
