--- a/10.2.0/angular/src/app/users/users.component.html
+++ b/10.2.0/angular/src/app/users/users.component.html
@@ -1,15 +1,37 @@
 <div [@routerTransition]>
     <section class="content-header">
         <div class="container-fluid">
-            <div class="row">
-                <div class="col-6">
-                    <h1>{{ 'Users' | localize }}</h1>
+            <div class="d-flex justify-content-between align-items-center">
+                <div>
+                    <p-breadcrumb [model]="items" />
                 </div>
-                <div class="col-6 text-right">
-                    <a href="javascript:;" class="btn bg-blue" (click)="createUser()">
-                        <i class="fa fa-plus-square"></i>
-                        {{ 'Create' | localize }}
-                    </a>
+                <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+                    <!-- <div class="btn-group mr-1" role="group" aria-label="First group" pTooltip="Download"
+                        tooltipPosition="top">
+                        <button type="button" class="btn btn-md refresh-btn">
+                            <span class="pi pi-download"></span>
+                        </button>
+                    </div>
+                    <div class="btn-group mr-1" role="group" aria-label="Second group" pTooltip="Print"
+                        tooltipPosition="top">
+                        <button type="button" class="btn btn-md refresh-btn">
+                            <span class="pi pi-print"></span>
+                        </button>
+                    </div> -->
+                    <div class="btn-group mr-1" role="group" aria-label="Third group" pTooltip="Refresh"
+                        tooltipPosition="top" (click)="refresh()">
+                        <button type="button" class="btn btn-md refresh-btn">
+                            <span class="pi pi-refresh"></span>
+                        </button>
+                    </div>
+                    <div class="btn-group mr-2" role="group" aria-label="Fourth group" (click)="createUser()">
+                        <button type="button" class="btn btn-md add-btn">
+                            <div class="d-flex align-items-center justify-content-between">
+                                <span class="pi pi-plus-circle mr-2"></span>
+                                <span>New User</span>
+                            </div>
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -18,112 +40,40 @@
         <div class="container-fluid">
             <div class="card table-wrapper">
                 <div class="card-header">
-                    <div class="row">
-                        <div class="col-md-6">&emsp;</div>
-                        <div class="col-md-6">
-                            <div class="input-group">
-                                <div class="input-group-prepend">
-                                    <button type="button" class="btn bg-blue" (click)="list()">
-                                        <i class="fas fa-search"></i>
-                                    </button>
-                                </div>
-                                <input
-                                    type="text"
-                                    class="form-control"
-                                    name="keyword"
-                                    [placeholder]="'SearchWithThreeDot' | localize"
-                                    [(ngModel)]="keyword"
-                                    (keyup.enter)="list()" />
-                                <div class="input-group-append">
-                                    <button
-                                        type="button"
-                                        class="btn btn-default"
-                                        (click)="advancedFiltersVisible = !advancedFiltersVisible">
-                                        <i
-                                            class="fas"
-                                            [class.fa-angle-up]="advancedFiltersVisible"
-                                            [class.fa-angle-down]="!advancedFiltersVisible"></i>
-                                    </button>
-                                </div>
-                            </div>
+                    <div class="d-flex justify-content-between  align-items-center">
+                        <div class="ml-2 btn-group mr-1" role="group" aria-label="Second group" pTooltip="Filter"
+                            tooltipPosition="top" (click)="rowMenu.toggle($event);">
+                            <button type="button" class="btn btn-md refresh-btn">
+                                <span class="pi pi-filter"></span>
+                            </button>
+                        </div>
+                        <p-overlayPanel #rowMenu class="custom-overlay" [dismissable]="true">
+                            <ul class="custom-overlay-menu">
+                                <li>
+                                    <p-checkbox [binary]="true" [(ngModel)]="activeFilter.all" size="small"
+                                        (onChange)="onFilterChange('all',$event)"></p-checkbox>&nbsp; All
+                                </li>
+                                <li>
+                                    <p-checkbox [binary]="true" [(ngModel)]="activeFilter.isActive" size="small"
+                                        (onChange)="onFilterChange('active',$event)"></p-checkbox>&nbsp; Active
+                                </li>
+                                <li>
+                                    <p-checkbox [binary]="true" [(ngModel)]="activeFilter.isNotActive" size="small"
+                                        (onChange)="onFilterChange('notActive',$event)"></p-checkbox>&nbsp; No Active
+                                </li>
+                            </ul>
+                        </p-overlayPanel>
+                        <div>
+                            <input class="search-bar-text" type="text" pInputText [(ngModel)]="keyword" pSize="small"
+                                [placeholder]="'SearchWithThreeDot' | localize" (input)="list()" />
                         </div>
                     </div>
-                    @if (advancedFiltersVisible) {
-                        <div class="card mb-0 mt-1">
-                            <div class="card-body">
-                                <form class="form-horizontal">
-                                    <div class="row">
-                                        <div class="col-md-6">
-                                            <div class="form-group row mb-0">
-                                                <label class="col-md-3 col-form-label">
-                                                    {{ 'IsActive' | localize }}
-                                                </label>
-                                                <div class="col-md-9 pt-2">
-                                                    <div class="custom-control custom-radio d-inline">
-                                                        <input
-                                                            type="radio"
-                                                            class="custom-control-input"
-                                                            id="isActiveAll"
-                                                            name="isActive"
-                                                            [(ngModel)]="isActive"
-                                                            [value]="undefined"
-                                                            checked />
-                                                        <label class="custom-control-label" for="isActiveAll">
-                                                            {{ 'All' | localize }}
-                                                        </label>
-                                                    </div>
-                                                    <div class="custom-control custom-radio d-inline mx-3">
-                                                        <input
-                                                            type="radio"
-                                                            class="custom-control-input"
-                                                            id="isActiveActive"
-                                                            name="isActive"
-                                                            [(ngModel)]="isActive"
-                                                            [value]="true" />
-                                                        <label class="custom-control-label" for="isActiveActive">
-                                                            {{ 'Yes' | localize }}
-                                                        </label>
-                                                    </div>
-                                                    <div class="custom-control custom-radio d-inline">
-                                                        <input
-                                                            type="radio"
-                                                            class="custom-control-input"
-                                                            id="isActivePassive"
-                                                            name="isActive"
-                                                            [(ngModel)]="isActive"
-                                                            [value]="false" />
-                                                        <label class="custom-control-label" for="isActivePassive">
-                                                            {{ 'No' | localize }}
-                                                        </label>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </form>
-                            </div>
-                            <div class="card-footer">
-                                <button type="button" class="btn bg-blue">
-                                    {{ 'Search' | localize }}
-                                </button>
-                                <button type="button" class="btn btn-default float-right" (click)="clearFilters()">
-                                    {{ 'Clear' | localize }}
-                                </button>
-                            </div>
-                        </div>
-                    }
                 </div>
-                <div class="card-body table-responsive table-striped table-bordered">
-                    <!--<Primeng-TurboTable-Start>-->
+                <div class="card-body">
                     <div class="primeng-datatable-container">
-                        <p-table
-                            #dataTable
-                            sortMode="multiple"
-                            (onLazyLoad)="list($event)"
+                        <p-table #dataTable sortMode="multiple" (onLazyLoad)="list($event)"
                             [value]="primengTableHelper.records"
-                            rows="{{ primengTableHelper.defaultRecordsCountPerPage }}"
-                            [paginator]="false"
-                            [lazy]="true"
+                            rows="{{ primengTableHelper.defaultRecordsCountPerPage }}" [paginator]="false" [lazy]="true"
                             [tableStyle]="{ 'min-width': '50rem' }">
                             <ng-template pTemplate="header">
                                 <tr>
@@ -139,7 +89,7 @@
                                         {{ 'EmailAddress' | localize }}
                                         <p-sortIcon field="emailAddress"></p-sortIcon>
                                     </th>
-                                    <th style="min-width: 150px" >
+                                    <th style="min-width: 150px">
                                         {{ 'Roles' | localize }}
                                     </th>
                                     <th style="min-width: 50px">
@@ -184,13 +134,13 @@
                                         </button>
                                         <p-overlayPanel #rowMenu class="custom-overlay" [dismissable]="true">
                                             <ul class="custom-overlay-menu">
-                                                <li (click)="editUser(selectedRecord)">   
+                                                <li (click)="editUser(selectedRecord)">
                                                     <i class="pi pi-pencil"></i> Edit
                                                 </li>
                                                 <li (click)="delete(selectedRecord)">
                                                     <i class="pi pi-trash"></i> Delete
                                                 </li>
-                                                <li (click)="resetPassword(selectedRecord)">   
+                                                <li (click)="resetPassword(selectedRecord)">
                                                     <i class="fas fa-lock"></i> ResetPassword
                                                 </li>
                                             </ul>
@@ -202,33 +152,17 @@
                         <div class="primeng-no-data" *ngIf="primengTableHelper.totalRecordsCount == 0">
                             {{ 'NoData' | localize }}
                         </div>
-                        <div class="ui-table-footer"></div>
                     </div>
                     <!--<Primeng-TurboTable-End>-->
                 </div>
                 <div class="card-footer table-card-footer bg-white border-top">
-                    <div class="row">
-                        <div class="col-sm-4 col-12 text-sm-left text-center">
-                            <button class="btn btn-secondary" (click)="refresh()">
-                                <i class="fas fa-redo-alt"></i>
-                            </button>
-                        </div>
-                        <div class="col-sm-8 col-12">
-                            <div class="float-sm-right m-auto">
-                                <div class="primeng-paging-container">
-                                    <p-paginator
-                                        [rows]="primengTableHelper.defaultRecordsCountPerPage"
-                                        #paginator
-                                        (onPageChange)="list($event)"
-                                        [totalRecords]="primengTableHelper.totalRecordsCount"
-                                        [rowsPerPageOptions]="primengTableHelper.predefinedRecordsCountPerPage"
-                                        [showCurrentPageReport]="true"
-                                        [currentPageReportTemplate]="
+                    <div class="primeng-paging-container">
+                        <p-paginator [rows]="primengTableHelper.defaultRecordsCountPerPage" #paginator
+                            (onPageChange)="list($event)" [totalRecords]="primengTableHelper.totalRecordsCount"
+                            [rowsPerPageOptions]="primengTableHelper.predefinedRecordsCountPerPage"
+                            [showCurrentPageReport]="true" [currentPageReportTemplate]="
                                             'TotalRecordsCount' | localize: primengTableHelper.totalRecordsCount
                                         "></p-paginator>
-                                </div>
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
