-> Worked on creating and binding the Lab Results, Billing Summary, and Discharge Instructions sections in the Discharge Summary page. -> Developed an API to retrieve the complete data in a single DTO with mapping. -> Added logic for handling multiple clearances required for the final discharge approval.

--- a/10.2.0/angular/src/app/doctors/create-prescriptions/create-prescriptions.component.html
+++ b/10.2.0/angular/src/app/doctors/create-prescriptions/create-prescriptions.component.html
@@ -12,12 +12,13 @@
             (onClick)="showCreatePatientDialog()" />
         </div>
         <p-select [(ngModel)]="prescription.patientId" name="patientId" [options]="patients" [optionValue]="'id'"
-          optionLabel="fullName" placeholder="Select a patient" class="w-100" required (onChange)="LoadAppoinments()" />
+          [disabled]="dischargePatientID>0" optionLabel="fullName" placeholder="Select a patient" class="w-100" required
+          (onChange)="LoadAppoinments()" />
       </div>
     </div>
 
     <!-- Appointment Selection -->
-    <div class="row mt-3"  *ngIf="!isPatientAdmitted()">
+    <div class="row mt-3" *ngIf="!isPatientAdmitted()">
       <div class="col-md-12">
         <label><b>Appointment</b></label>
         <p-select [(ngModel)]="prescription.appointmentId" name="appointmentId" [options]="appointments"
@@ -108,7 +109,7 @@
           <div class="d-flex align-items-center">
             <!-- Medicine Dropdown -->
             <p-dropdown appendTo="self" [(ngModel)]="item.medicineId" [options]="medicineOptions" optionLabel="label"
-              optionValue="value"  placeholder="Select Medicine" class="w-25 mr-2" name="itemMedicine{{i}}"
+              optionValue="value" placeholder="Select Medicine" class="w-25 mr-2" name="itemMedicine{{i}}"
               (onChange)="onMedicineChange(item, i)">
             </p-dropdown>
             <!-- Dosage Dropdown -->
